--- a/jiuzhou.html
+++ b/jiuzhou.html
@@ -574,12 +574,12 @@ mso-bidi-font-family:'Times New Roman';font-size:12.0000pt;mso-font-kerning:0.00
 mso-pagination:widow-orphan;line-height:30.0000pt;" ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:宋体;
 mso-bidi-font-family:'Times New Roman';font-size:16.0000pt;mso-font-kerning:0.0000pt;" >11.<font face="宋体" >法律法规规定的其他情形。</font></span><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:宋体;
 mso-bidi-font-family:'Times New Roman';font-size:12.0000pt;mso-font-kerning:0.0000pt;" ><o:p></o:p></span></p><h4 style="margin-bottom:20.0000pt;mso-pagination:widow-orphan;line-height:30.0000pt;" ><b><span style="mso-spacerun:'yes';font-family:宋体;font-weight:bold;
-font-size:18.0000pt;mso-font-kerning:0.0000pt;" >(六)个性化</span></b><b><span style="mso-spacerun:'yes';font-family:宋体;font-weight:bold;
+font-size:18.0000pt;mso-font-kerning:0.0000pt;" ></span></b><b><span style="mso-spacerun:'yes';font-family:宋体;font-weight:bold;
 font-size:18.0000pt;mso-font-kerning:0.0000pt;" ><o:p></o:p></span></b></h4><p class=p  style="margin-bottom:20.0000pt;margin-left:0.0000pt;text-indent:21.0000pt;
 mso-pagination:widow-orphan;line-height:30.0000pt;" ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:宋体;
-mso-bidi-font-family:'Times New Roman';font-size:16.0000pt;mso-font-kerning:0.0000pt;" ><font face="宋体" >个性化广告是一种通用广告技术，是广告主根据用户在</font>APP<font face="宋体" >内的偏好进行智能推荐的广告。我们仅实现广告对接及展示技术，不参与广告内容的提供</font></span><span style="mso-spacerun:'yes';font-family:宋体;mso-ascii-font-family:Calibri;
+mso-bidi-font-family:'Times New Roman';font-size:16.0000pt;mso-font-kerning:0.0000pt;" ><font face="宋体" ></font></span><span style="mso-spacerun:'yes';font-family:宋体;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:16.0000pt;
-mso-font-kerning:0.0000pt;" ><font face="宋体" >。</font></span><span style="mso-spacerun:'yes';font-family:宋体;mso-ascii-font-family:Calibri;
+mso-font-kerning:0.0000pt;" ><font face="宋体" ></font></span><span style="mso-spacerun:'yes';font-family:宋体;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:12.0000pt;
 mso-font-kerning:0.0000pt;" ><o:p></o:p></span></p><h3 style="margin-bottom:20.0000pt;mso-pagination:widow-orphan;line-height:30.0000pt;" ><b><span style="mso-spacerun:'yes';font-family:宋体;font-weight:bold;
 font-size:20.0000pt;mso-font-kerning:0.0000pt;" ><font face="宋体" >三、我们如何共享、转让、公开披露您的个人信息</font></span></b><b><span style="mso-spacerun:'yes';font-family:宋体;font-weight:bold;
