--- a/jiuzhouapp.html
+++ b/jiuzhouapp.html
@@ -1,11 +1,11 @@
-<p>九州体育APP隐私政策<br />
+<p>九州隐私政策<br />
     本隐私政策的更新日期为2024年08月30日，并将于2024年08月31日正式生效。<br />
     公司名称：晋中碧涛网络科技有限公司<br />
     联系邮箱：letian58414173@163.com</p>
 
 <p>导言<br />
-    欢迎使用九州体育APP。<br />
-    晋中碧涛网络科技有限公司(以下简称&ldquo;我们&rdquo;)&nbsp;非常重视保护您的个人信息和隐私安全。在使用我们的产品和服务前，请您务必仔细阅读并充分了解九州体育APP隐私政策（以下简称&ldquo;本政策&rdquo;）。<br />
+    欢迎使用九州。<br />
+    晋中碧涛网络科技有限公司(以下简称&ldquo;我们&rdquo;)&nbsp;非常重视保护您的个人信息和隐私安全。在使用我们的产品和服务前，请您务必仔细阅读并充分了解九州隐私政策（以下简称&ldquo;本政策&rdquo;）。<br />
     未满18周岁的未成年人请务必在监护人的陪同下阅读本政策，并确保已征得您的监护人明确同意后，再使用我们的服务并提供您的个人信息。<br />
     若您使用我们的服务，表示您或您的监护人已理解本政策，并同意按照本政策规定的方式对您的个人信息进行收集和使用。<br />
     本政策将帮助您了解以下内容：<br />
@@ -24,7 +24,7 @@
     十三、附录-权限申请、使用目的及业务场景<br />
     一、我们收集哪些信息，以及我们如何使用这些信息<br />
     (一)&nbsp;您在使用我们服务时主动提供的信息<br />
-    当您使用九州体育APP及相关服务时，您可以设置九州体育APP的帐号、名字，您还可以通过提供手机号码以及验证码匹配结果进行身份验证。我们收集这些信息是用于为您提供帐号登录服务以及保障您的帐号安全，防范安全风险。请您知悉，您的手机号码和验证码匹配结果属于个人通信信息，请您谨慎考虑之后再决定是否提供。&nbsp;如您仅需要运动计步等基本功能及服务，您无需设置帐号并提供上述信息。<br />
+    当您使用九州及相关服务时，您可以设置九州的帐号、名字，您还可以通过提供手机号码以及验证码匹配结果进行身份验证。我们收集这些信息是用于为您提供帐号登录服务以及保障您的帐号安全，防范安全风险。请您知悉，您的手机号码和验证码匹配结果属于个人通信信息，请您谨慎考虑之后再决定是否提供。&nbsp;如您仅需要运动计步等基本功能及服务，您无需设置帐号并提供上述信息。<br />
     (二)&nbsp;从第三方间接获取的信息<br />
     您也可以使用第三方平台的帐号（例如：微信/QQ/微博帐号）进行登录，如您使用第三方平台的帐号登录的，我们将根据您的授权获取该第三方帐号下的相关信息（包括：用户名、昵称，具体以您的授权内容为准）以及身份验证信息（个人敏感信息）。&nbsp;如您拒绝授权此类信息的，您将无法使用第三方平台的帐号登录我们平台，但不影响我们为您提供的其他功能和服务的正常使用。<br />
     (三)&nbsp;设备信息<br />
@@ -35,16 +35,16 @@
     (五)&nbsp;基于正常使用功能及服务的个人信息<br />
     1.&nbsp;核心功能：当您使用跑步记录、计步功能时，我们将需要读取、修改、删除储存卡中的内容权限。当您在启动弹窗处选择并点击【同意/开启】即视为您授权我们可以访问、获取您的该等个人信息，如您拒绝提供会使您无法记录、查看信息。<br />
     2.&nbsp;客户服务：当您向我们提起投诉、进行咨询或申诉时，为了方便与您联系或帮助您解决问题，我们可能需要您提供姓名、手机号码、电子邮件及其他有效的联系方式等个人信息。如您拒绝授权相关权限及提供上述信息，我们可能无法向您及时反馈相关处理结果。为了更好的让您了解我们的产品与服务，我们可能会向您进行相关的问卷调查，调查问卷数据仅用于我们统计汇总、优化运营、提升用户体验，我们不会透露您的个人信息。<br />
-    3.&nbsp;统计数据：当您使用九州体育APP的登录、注册、计步功能时，我们会收集这些行为产生的数据并上报到服务器。我们收集这些信息是为了更全面地了解九州体育APP的运行情况，帮助我们做出进一步的完善。<br />
+    3.&nbsp;统计数据：当您使用九州的登录、注册、计步功能时，我们会收集这些行为产生的数据并上报到服务器。我们收集这些信息是为了更全面地了解九州的运行情况，帮助我们做出进一步的完善。<br />
     二、对Cookie和同类技术的使用<br />
     (一)&nbsp;关于Cookie和同类技术<br />
     Cookie是包含字符串的小文件，在您登入和使用网站或其他网络内容时发送、存放在您的计算机、移动设备或其他装置内（通常经过加密）。Cookie同类技术是可用于与Cookie类似用途的其他技术，例如：Web Beacon、Proxy、嵌入式脚本等。<br />
     (二)&nbsp;我们如何使用Cookie和同类技术<br />
-    当您使用九州体育APP的功能和服务时，我们可能会使用Cookie和同类技术向您的设备发送一个或多个Cookie或匿名标识符，以收集和存储您访问、使用功能及服务时的信息。我们使用Cookie和同类技术主要为了您使用我们的功能及服务的必要、简化您重复操作的步骤（如注册、登录）、便于您查看使用历史、保护您的信息和帐号安全性、改善我们的产品和服务等。<br />
+    当您使用九州的功能和服务时，我们可能会使用Cookie和同类技术向您的设备发送一个或多个Cookie或匿名标识符，以收集和存储您访问、使用功能及服务时的信息。我们使用Cookie和同类技术主要为了您使用我们的功能及服务的必要、简化您重复操作的步骤（如注册、登录）、便于您查看使用历史、保护您的信息和帐号安全性、改善我们的产品和服务等。<br />
     我们承诺，我们不会将Cookie用于本隐私政策所述目的之外的任何其他用途。<br />
     三、共享信息（合作sdk及涉及权限）<br />
-    我们不会向任何公司、组织、个人共享您的个人信息，但以下情况除外：&nbsp;(一)&nbsp;在获取明确同意的情况下共享：获得您的明确同意后，我们会与其他方共享您的个人信息。&nbsp;(二)&nbsp;在法定条件下共享：我们可能会根据法律法规规定、诉讼争议解决需要、按照政府主管部门或司法机关依法提出的强制要求，对外共享您的个人信息。&nbsp;(三)&nbsp;在法律要求或允许的范围内，为了保护九州体育APP及用户或社会公众的利益、财产或安全免遭损害而有必要提供您的个人信息给第三方。&nbsp;(四)&nbsp;与第三方合作方的共享<br />
-    为了在第三方平台分享信息、使我们通过分析用户行为，提供更好的服务和用户体验。九州体育APP应用中接入了第三方合作方，上述合作方包括部分使用安卓系统的手机厂商、第三方数据分析平台友盟SDK、服务平台腾讯优量汇SDK和穿山甲SDK。为了给您提供服务，第三方合作方可能会调用部分权限收集您的个人信息以实现功能，第三方所调用的权限类型可能包括获取您的位置信息、读取外置存储卡、写入外部存储卡、读取您的手机状态和身份、查看WLAN连接。我们会以高度的勤勉义务对待您的信息，审慎评估第三方收集、使用信息的目的，会对第三方获取信息的SDK(软件工具开发包)进行严格的安全监测，以保证数据安全。<br />
+    我们不会向任何公司、组织、个人共享您的个人信息，但以下情况除外：&nbsp;(一)&nbsp;在获取明确同意的情况下共享：获得您的明确同意后，我们会与其他方共享您的个人信息。&nbsp;(二)&nbsp;在法定条件下共享：我们可能会根据法律法规规定、诉讼争议解决需要、按照政府主管部门或司法机关依法提出的强制要求，对外共享您的个人信息。&nbsp;(三)&nbsp;在法律要求或允许的范围内，为了保护九州及用户或社会公众的利益、财产或安全免遭损害而有必要提供您的个人信息给第三方。&nbsp;(四)&nbsp;与第三方合作方的共享<br />
+    为了在第三方平台分享信息、使我们通过分析用户行为，提供更好的服务和用户体验。九州应用中接入了第三方合作方，上述合作方包括部分使用安卓系统的手机厂商、第三方数据分析平台友盟SDK、服务平台腾讯优量汇SDK和穿山甲SDK。为了给您提供服务，第三方合作方可能会调用部分权限收集您的个人信息以实现功能，第三方所调用的权限类型可能包括获取您的位置信息、读取外置存储卡、写入外部存储卡、读取您的手机状态和身份、查看WLAN连接。我们会以高度的勤勉义务对待您的信息，审慎评估第三方收集、使用信息的目的，会对第三方获取信息的SDK(软件工具开发包)进行严格的安全监测，以保证数据安全。<br />
     我们的合作方包括以下类型：<br />
     &nbsp;<br />
     1.&nbsp;服务类合作方<br />
@@ -169,9 +169,9 @@
     ●如果我们处理个人信息的行为违反法律法规；<br />
     ●如果我们收集、使用您的个人信息，却未征得您的同意；<br />
     ●如果我们处理个人信息的行为违反了与您的约定；<br />
-    ●如果您不再使用我们的产品或服务，或者您注销了九州体育APP帐号；<br />
-    ●如果您不再使用我们的产品或服务，或者您注销了九州体育APP帐号；<br />
-    以上删除请求一旦被响应，我们还将同时尽可能通知从九州体育APP获得您个人信息的主体，要求其及时删除相应信息，除非法律法规另有规定，或者这些主体获得您的独立授权。当您从我们的服务中删除信息后，我们可能不会立即从备份系统中删除相应的信息，我们将会在备份更新时删除这些信息或者实现匿名化处理。<br />
+    ●如果您不再使用我们的产品或服务，或者您注销了九州帐号；<br />
+    ●如果您不再使用我们的产品或服务，或者您注销了九州帐号；<br />
+    以上删除请求一旦被响应，我们还将同时尽可能通知从九州获得您个人信息的主体，要求其及时删除相应信息，除非法律法规另有规定，或者这些主体获得您的独立授权。当您从我们的服务中删除信息后，我们可能不会立即从备份系统中删除相应的信息，我们将会在备份更新时删除这些信息或者实现匿名化处理。<br />
     (二)&nbsp;撤回您的授权<br />
     如果您希望撤销同意我们收集、使用和披露您的其他个人信息或者希望我们更正或删除您的个人信息，您可以随时联系我们。联系方式：tzjuchao@163.com。&nbsp;我们将会在收到您的电子邮件后的合理时间内处理您的请求并停止收集、使用和披露您的个人信息。&nbsp;请您理解并同意，当您撤回某些授权时，将导致与之相关的产品功能不可用，我们无法继续为您提供撤回同意或授权所对应的特定功能和/或服务，并且您撤回授权的决定不会影响此前基于您的授权而开展的个人信息处理。<br />
     (三)&nbsp;注销帐户<br />
@@ -182,12 +182,12 @@
     考虑到我们无法辨别网络访问者的年龄，如有不满18周岁的未成年人在未得到其父母或监护人同意的情况下向我们提供了个人资料，其父母或监护人可发送邮件至tzjuchao@163.com&nbsp;，或拨打电话至15321856610，或通过客服（官方QQ：2947728667 /&nbsp;官方微信：&nbsp;APPkaji666）联系我们，以移除此类信息。<br />
     我们无意也不试图收集未满18周岁的未成年人信息。<br />
     十、变更<br />
-    我们可能会根据业务的调整、法律法规或政策的变化不定期修改或更新本政策，请根据提示定期查阅。我们将在变更生效前，通过在页面显著位置提示、向您发送电子邮件等方式通知。请您仔细阅读更新的隐私政策，若您不同意修订后的隐私政策，您有权修改个人信息或立即停止使用九州体育APP。<br />
+    我们可能会根据业务的调整、法律法规或政策的变化不定期修改或更新本政策，请根据提示定期查阅。我们将在变更生效前，通过在页面显著位置提示、向您发送电子邮件等方式通知。请您仔细阅读更新的隐私政策，若您不同意修订后的隐私政策，您有权修改个人信息或立即停止使用九州。<br />
     十一、适用法律及管辖<br />
     本政策的解释及争议解决均应适用中华人民共和国大陆地区法律。<br />
     与本政策相关的任何纠纷，双方应协商友好解决；若不能协商解决，任何一方均可将有关争议提交至被告所在地有管辖权的人民法院管辖。<br />
     十二、联系我们<br />
-    如果您在使用九州体育APP功能或服务中，有任何隐私保护相关的疑问、投诉、举报等，请将问题邮寄至：浙江省杭州市余杭区仓前街道欧美金融城8幢3219室。或发送电子邮件至tzjuchao@163.com，或拨打电话至17338566800，或通过客服（官方QQ：1946334137 /&nbsp;官方微信：yonia77）联系我们。我们将在十五日内进行反馈。<br />
+    如果您在使用九州功能或服务中，有任何隐私保护相关的疑问、投诉、举报等，请将问题邮寄至：浙江省杭州市余杭区仓前街道欧美金融城8幢3219室。或发送电子邮件至tzjuchao@163.com，或拨打电话至17338566800，或通过客服（官方QQ：1946334137 /&nbsp;官方微信：yonia77）联系我们。我们将在十五日内进行反馈。<br />
     十三、附录-权限申请、使用目的及业务场景<br />
     1.&nbsp;读取、修改、删除储存卡中的内容（WRITE_EXTERNAL_STORAGE、READ_EXTERNAL_STORAGE），主要用于用户保存以及读取用户的运动信息；修改个人头像时需从相册选择图片，也需要该权限。此为必要权限，申请时未授权会影响会影响运动信息记录和头像更换功能。<br />
     2.&nbsp;获取用户设备的唯一设备识别码（IMEI/Mac/android ID/IDFA/OPENUDID/GUID），主要用于友盟SDK统计新增及活跃用户。同时穿山甲SDK、优量汇SDK需要此权限实现归因、剔除作弊设备功能。此为非必要权限，申请时您可以拒绝授权。<br />
@@ -205,30 +205,30 @@
     &ldquo;拒绝权限申请且不再询问&rdquo;引导：在拒绝授予相关权限时，部分安卓系统在权限申请首次弹窗时只提供&ldquo;拒绝&rdquo;按钮，重新运行后第二次弹窗会出现&ldquo;拒绝且不再询问&rdquo;按钮。如您需首次弹窗即可使用&ldquo;拒绝且不再询问&rdquo;按钮<br />
     &nbsp;</p>
 
-<p>九州体育APP隐私条约<br />
+<p>九州隐私条约<br />
     &nbsp;<br />
     协议的版本及生效日期<br />
     生效日期：2021年09月22日<br />
     最近更新和发布日期：2021年09月22日（取代先前版本）<br />
     &nbsp;<br />
     重要提示：<br />
-    《九州体育APP隐私条约》（以下简称&ldquo;本协议&rdquo;）由晋中碧涛网络科技有限公司及其关联企业（以下简称&ldquo;晋中碧涛网络科技有限公司&rdquo;或&ldquo;我们&rdquo;）与您（以下或称&ldquo;用户&rdquo;）签订。本协议一经订立，将在您与晋中碧涛网络科技有限公司之间具有合同效力。晋中碧涛网络科技有限公司郑重提示您，请您审慎阅读并充分理解本协议全部条款，特别是以粗体字样标识的内容。当您勾选或点击&ldquo;同意&rdquo;本协议，即视为您已阅读并同意接受本协议的约束。如您不同意本协议，请立即停止注册或使用晋中碧涛网络科技有限公司的服务。<br />
+    《九州隐私条约》（以下简称&ldquo;本协议&rdquo;）由晋中碧涛网络科技有限公司及其关联企业（以下简称&ldquo;晋中碧涛网络科技有限公司&rdquo;或&ldquo;我们&rdquo;）与您（以下或称&ldquo;用户&rdquo;）签订。本协议一经订立，将在您与晋中碧涛网络科技有限公司之间具有合同效力。晋中碧涛网络科技有限公司郑重提示您，请您审慎阅读并充分理解本协议全部条款，特别是以粗体字样标识的内容。当您勾选或点击&ldquo;同意&rdquo;本协议，即视为您已阅读并同意接受本协议的约束。如您不同意本协议，请立即停止注册或使用晋中碧涛网络科技有限公司的服务。<br />
     &nbsp;<br />
     一、总则<br />
-    1.&nbsp;九州体育APP为晋中碧涛网络科技有限公司所运营的为您提供文件扫描、证件扫描、PDF格式转换等服务的工具，具体服务类型包括但不限于九州体育APP、供调用的九州体育APP应用程序编程接口（API）或九州体育APP应用软件开发工具包（SDK）。<br />
-    2.&nbsp;晋中碧涛网络科技有限公司有权根据法律法规、国家标准及业务运营之需要适时修改本协议。如果本协议发生变更的，我们将在九州体育APP中公布更新后的协议。该等变更行为不视为晋中碧涛网络科技有限公司违反本协议之约定。如您在本协议修改后继续使用九州体育APP，即表示您已充分阅读、理解并同意修改后的协议，愿意受修改后协议的约束；如您不同意修改后的协议，请立即停止使用晋中碧涛网络科技有限公司APP。<br />
+    1.&nbsp;九州为晋中碧涛网络科技有限公司所运营的为您提供文件扫描、证件扫描、PDF格式转换等服务的工具，具体服务类型包括但不限于九州、供调用的九州应用程序编程接口（API）或九州应用软件开发工具包（SDK）。<br />
+    2.&nbsp;晋中碧涛网络科技有限公司有权根据法律法规、国家标准及业务运营之需要适时修改本协议。如果本协议发生变更的，我们将在九州中公布更新后的协议。该等变更行为不视为晋中碧涛网络科技有限公司违反本协议之约定。如您在本协议修改后继续使用九州，即表示您已充分阅读、理解并同意修改后的协议，愿意受修改后协议的约束；如您不同意修改后的协议，请立即停止使用晋中碧涛网络科技有限公司APP。<br />
     3.&nbsp;除本协议以外，我们已经发布的或将来可能发布的有关晋中碧涛网络科技有限公司向您提供产品或服务的协议、服务规则、政策、须知等内容，均视为本协议的补充协议，作为本协议不可分割的组成部分，与本协议具有同等法律效力。请您及时关注并阅读前述相关补充协议。相关补充协议的部分或全部条款被认定无效的，不影响其它协议或协议条款的效力。<br />
     4.&nbsp;如本协议与您和晋中碧涛网络科技有限公司签订的线下协议或购买具体服务生成的电子订单（以下简称&ldquo;电子订单&rdquo;）的约定不一致，则以线下协议或电子订单的约定为准。<br />
     &nbsp;<br />
     二、账户注册<br />
-    1.&nbsp;您在使用九州体育APP时可能需要注册一个账户，或者使用我们认可的第三方账户登录，否则我们有权拒绝向您提供服务。<br />
+    1.&nbsp;您在使用九州时可能需要注册一个账户，或者使用我们认可的第三方账户登录，否则我们有权拒绝向您提供服务。<br />
     2.&nbsp;账户注册条件：<br />
     （1） 如您为成年人（即18周岁以上）、法人或其他组织，您应具有完全民事行为能力；<br />
-    （2） 如果您不具备完全民事行为能力，您在注册、使用九州体育APP前，应事先取得监护人的同意。特别的，如您为未成年人（即未满18周岁，下同），还应遵守本协议有关未成年人使用条款的规定。<br />
+    （2） 如果您不具备完全民事行为能力，您在注册、使用九州前，应事先取得监护人的同意。特别的，如您为未成年人（即未满18周岁，下同），还应遵守本协议有关未成年人使用条款的规定。<br />
     （3） 如您不符合上述任一条件，请您立即停止注册或使用晋中碧涛网络科技有限公司的服务，否则晋中碧涛网络科技有限公司有权随时暂停或终止您的用户资格。<br />
     3.&nbsp;完成注册：<br />
     （1） 您应当按照注册页面的提示，提供真实、完整、准确的信息，您不得使用他人的信息注册账户或向晋中碧涛网络科技有限公司提供其他的虚假信息。<br />
-    （2）&nbsp;九州体育APP账户的所有权归晋中碧涛网络科技有限公司所有，您完成申请注册后，仅获得账户的使用权。<br />
+    （2）&nbsp;九州账户的所有权归晋中碧涛网络科技有限公司所有，您完成申请注册后，仅获得账户的使用权。<br />
     4.&nbsp;信息真实性保证：<br />
     （1） 如发现您以虚假或不实信息骗取注册，晋中碧涛网络科技有限公司有权不经通知单方采取限期改正、删除资料、限制或暂停使用、冻结或注销账户并终止对您提供部分或全部服务等措施。<br />
     （2） 您应及时更正不实信息，更新、完善您的相关信息。<br />
@@ -240,13 +240,13 @@
     2.&nbsp;如您发现账号、密码被他人冒用或盗用，请立即以有效方式通知晋中碧涛网络科技有限公司，要求晋中碧涛网络科技有限公司暂停服务。晋中碧涛网络科技有限公司在采取行动的合理期限内，不对您的损失承担任何责任。<br />
     3.&nbsp;您不得将账号、密码以及部分或全部的账户权益转让、出售、出租、出借或分享给他人。如因您将账号、密码以及部分或全部的账户权益转让、出售、出租、出借或分享给他人，导致侵犯或可能侵犯晋中碧涛网络科技有限公司的合法权益或者第三方的个人信息、隐私权等其他合法权益，晋中碧涛网络科技有限公司有权不经通知而限制、冻结、注销您的账户，暂停或终止向您提供本协议项下的部分或全部服务，且无需对为此承担任何责任。<br />
     4.&nbsp;通过您的账户扫描、上传、制作、分享的任何信息或作出的任何行为都将视为您本人的行为，您应对该账户下发生所有行为负全部责任。<br />
-    5.&nbsp;请您在申请注销手机号或邮箱，或者手机号、邮箱因其他原因被注销的时候，及时更新九州体育APP账号绑定的手机号或邮箱信息。如因您不及时更新九州体育APP账号绑定的手机号或邮箱信息而导致用户数据泄露或其他个人权益受损，晋中碧涛网络科技有限公司不承担任何责任。<br />
+    5.&nbsp;请您在申请注销手机号或邮箱，或者手机号、邮箱因其他原因被注销的时候，及时更新九州账号绑定的手机号或邮箱信息。如因您不及时更新九州账号绑定的手机号或邮箱信息而导致用户数据泄露或其他个人权益受损，晋中碧涛网络科技有限公司不承担任何责任。<br />
     &nbsp;<br />
     四、软件及服务使用规范<br />
     1.&nbsp;晋中碧涛网络科技有限公司给予您一项不可转让、可撤销及非排他性的许可，以使用我们的软件及服务。除另有书面约定，您仅可以为非商业目的在相应的终端设备上安装、使用、运行我们的软件及服务。<br />
     2.&nbsp;您可以直接从晋中碧涛网络科技有限公司的网站上获取我们的软件，也可以从得到晋中碧涛网络科技有限公司授权的第三方处获取。如果您从未经晋中碧涛网络科技有限公司授权的第三方获取我们的软件或与该等软件名称相同的安装程序，我们无法保证该软件能够正常使用，并对因此给您造成的损失不予负责。<br />
-    3.&nbsp;请您正确使用九州体育APP，如您使用九州体育APP，关于具体功能和操作方法您可以参考九州体育APP&ldquo;帮助&rdquo;项下的内容；如果九州体育APP&ldquo;帮助&rdquo;项下的内容无法帮助到您，或您使用晋中碧涛网络科技有限公司APP网站、晋中碧涛网络科技有限公司APPAPI或SDK时产生疑问，您可以直接联系我们，以获取必要的帮助：tzjuchao@163.com。因您设置或操作不当造成的损失由您自行承担。<br />
-    4.&nbsp;您理解并同意，您不得利用九州体育APP扫描、上传、制作、分享、传播含有如下内容的信息：<br />
+    3.&nbsp;请您正确使用九州，如您使用九州，关于具体功能和操作方法您可以参考九州&ldquo;帮助&rdquo;项下的内容；如果九州&ldquo;帮助&rdquo;项下的内容无法帮助到您，或您使用晋中碧涛网络科技有限公司APP网站、晋中碧涛网络科技有限公司APPAPI或SDK时产生疑问，您可以直接联系我们，以获取必要的帮助：tzjuchao@163.com。因您设置或操作不当造成的损失由您自行承担。<br />
+    4.&nbsp;您理解并同意，您不得利用九州扫描、上传、制作、分享、传播含有如下内容的信息：<br />
     （1） 反对中华人民共和国宪法所确定的基本原则的；<br />
     （2） 危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；<br />
     （3） 损害国家荣誉和利益的；<br />
@@ -270,21 +270,21 @@
     （9） 出于恶意进行的任何操作，或可能损害针对我们的产品或服务的任何评级或评论，以及任何可能影响我们的产品或服务完整性或准确性的任何行为；<br />
     （10） 侵犯或可能侵犯晋中碧涛网络科技有限公司或任何第三方的知识产权、个人信息、隐私权或其他合法权益；<br />
     （11） 从事违反法律或本协议的其他行为。<br />
-    6.&nbsp;您使用九州体育APP发送、上传的任何内容（包括但不限于文档图片、文档信息或其他信息等，以下简称&ldquo;内容&rdquo;），无论是公开还是私下传送，均由您承担责任，您保证已拥有必要授权上传内容，不得侵犯他人的知识产权、个人信息、隐私权等合法权益。若因您的行为导致晋中碧涛网络科技有限公司受到损失（包括但不限于损害赔偿、律师费），您同意对该损失承担全部赔偿责任。晋中碧涛网络科技有限公司保留依法对内容进行审核、屏蔽、删除的权利或终止服务的权利。<br />
-    7.&nbsp;如您在使用九州体育APP的过程中，违反法律的规定或本协议的任何约定，导致晋中碧涛网络科技有限公司、其他用户或任何第三方损失，您应当承担全部的责任，晋中碧涛网络科技有限公司不为此承担任何责任。<br />
+    6.&nbsp;您使用九州发送、上传的任何内容（包括但不限于文档图片、文档信息或其他信息等，以下简称&ldquo;内容&rdquo;），无论是公开还是私下传送，均由您承担责任，您保证已拥有必要授权上传内容，不得侵犯他人的知识产权、个人信息、隐私权等合法权益。若因您的行为导致晋中碧涛网络科技有限公司受到损失（包括但不限于损害赔偿、律师费），您同意对该损失承担全部赔偿责任。晋中碧涛网络科技有限公司保留依法对内容进行审核、屏蔽、删除的权利或终止服务的权利。<br />
+    7.&nbsp;如您在使用九州的过程中，违反法律的规定或本协议的任何约定，导致晋中碧涛网络科技有限公司、其他用户或任何第三方损失，您应当承担全部的责任，晋中碧涛网络科技有限公司不为此承担任何责任。<br />
     &nbsp;<br />
     五、 会员购买和充值规则<br />
     1.&nbsp;我们的某些产品或服务是以收费方式提供的，您要购买或充值后才能使用。请您在下单前，仔细确认所购的会员种类、服务名称、价格、数量等订单信息。<br />
     2.&nbsp;当您提交订单信息并成功支付相应价款时，您与晋中碧涛网络科技有限公司关于该产品或服务的买卖合同成立并生效。在合同成立并生效之前，您与晋中碧涛网络科技有限公司皆有权取消该服务的订单。此处提请您注意，合同成立并生效是晋中碧涛网络科技有限公司向您提供会员权益、云存储空间、传真服务或翻译服务等服务的前提。<br />
     3.&nbsp;晋中碧涛网络科技有限公司可能根据实际需要对收费服务的收费标准、方式进行修改和变更。我们通过线上提供的产品或服务价格随时可能变更，晋中碧涛网络科技有限公司不对产品或服务的降价或促销提供价格保护或退款。<br />
-    4.&nbsp;尽管晋中碧涛网络科技有限公司会尽最大可能保障九州体育APP所展示的产品或服务价格的准确性，但由于系统故障、人为失误等各种因素均可能导致价格显示异常。如因上述情形造成的产品或服务的价格异常，导致晋中碧涛网络科技有限公司继续履行合同显失公平的，我们有权根据具体情况与您协商一致后，解除合同并返还您已支付的价款。<br />
+    4.&nbsp;尽管晋中碧涛网络科技有限公司会尽最大可能保障九州所展示的产品或服务价格的准确性，但由于系统故障、人为失误等各种因素均可能导致价格显示异常。如因上述情形造成的产品或服务的价格异常，导致晋中碧涛网络科技有限公司继续履行合同显失公平的，我们有权根据具体情况与您协商一致后，解除合同并返还您已支付的价款。<br />
     5.&nbsp;软件类产品含有的授权/激活信息（包括且不限于激活码、密码等）可能被泄露用于其他用户开通账户，该类产品为不适用无理由退货的特殊商品。如您因商品质量或其他问题需要任何咨询或帮助，您可以发送邮件至：tzjuchao@163.com。<br />
     &nbsp;<br />
     六、 信息存储及同步<br />
-    1.&nbsp;您了解并同意，使用九州体育APP时相关信息将存储于您的终端设备中，占用您终端设备的存储空间。<br />
+    1.&nbsp;您了解并同意，使用九州时相关信息将存储于您的终端设备中，占用您终端设备的存储空间。<br />
     2.&nbsp;您应根据需要选择在使用本服务时是否设定密码以保护信息安全。<br />
-    3.&nbsp;如果您登录您的账户并使用九州体育APP，则您同意导入的信息将会存储于晋中碧涛网络科技有限公司的服务器中。如果您不同意将导入的部分或全部信息存储于晋中碧涛网络科技有限公司的服务器中，您可以仅在&ldquo;私密文件夹&rdquo;中导入该信息，&ldquo;私密文件夹&rdquo;中的所有信息将只存储在您的终端设备中。<br />
-    4.&nbsp;您在登录状态下使用九州体育APP时，如果直接修改终端设备中的信息，该信息可能将会按照最后修改的结果在终端设备和服务器之间同步。在您临时用非本人所有的终端设备使用本服务时，请及时退出登录，并注意对您的设置进行必要调整以免泄漏您或他人的个人信息和隐私。<br />
+    3.&nbsp;如果您登录您的账户并使用九州，则您同意导入的信息将会存储于晋中碧涛网络科技有限公司的服务器中。如果您不同意将导入的部分或全部信息存储于晋中碧涛网络科技有限公司的服务器中，您可以仅在&ldquo;私密文件夹&rdquo;中导入该信息，&ldquo;私密文件夹&rdquo;中的所有信息将只存储在您的终端设备中。<br />
+    4.&nbsp;您在登录状态下使用九州时，如果直接修改终端设备中的信息，该信息可能将会按照最后修改的结果在终端设备和服务器之间同步。在您临时用非本人所有的终端设备使用本服务时，请及时退出登录，并注意对您的设置进行必要调整以免泄漏您或他人的个人信息和隐私。<br />
     5.&nbsp;如果您不慎删除终端设备账户内的信息而导致信息丢失的，您可以访问晋中碧涛网络科技有限公司APP网站登录账户以恢复您的信息，但我们并不保证您一定能够恢复您的信息。<br />
     6.&nbsp;尽管晋中碧涛网络科技有限公司将采取必要措施依法存储您的数据并对其加以保护，我们提醒您仍应通过其他方式自行备份您的数据，我们无法对您未成功存储或自行删除的数据负责。<br />
     &nbsp;<br />
@@ -304,13 +304,13 @@
     6.&nbsp;因注销账户所带来的不便或不利后果，由您自行承担。<br />
     &nbsp;<br />
     八、数据保护<br />
-    晋中碧涛网络科技有限公司重视对用户信息的保护。《&nbsp;九州体育APP隐私政策》呈现了晋中碧涛网络科技有限公司将如何收集、使用、保存、共享及保护您的信息，详情请参阅《&nbsp;九州体育APP隐私政策》。<br />
+    晋中碧涛网络科技有限公司重视对用户信息的保护。《&nbsp;九州隐私政策》呈现了晋中碧涛网络科技有限公司将如何收集、使用、保存、共享及保护您的信息，详情请参阅《&nbsp;九州隐私政策》。<br />
     &nbsp;<br />
     九、风险自担<br />
     1.&nbsp;晋中碧涛网络科技有限公司将按现有技术水平，尽力保障晋中碧涛网络科技有限公司服务的正确、持续、及时和安全，但我们对无法合理预知和不可控制的意外风险（如计算机病毒、木马或其他恶意程序、黑客攻击，设备、系统、硬件软件和通信线路故障、自然灾害等）、产品技术瑕疵、服务的稳定性以及由此产生的任何损失或损害不作任何形式的保证，亦不负任何赔偿责任，但法律另有规定的除外。<br />
     2.&nbsp;我们的产品或服务可能会不时提供更新，您可以自主选择是否接受更新；如果您选择不更新，我们不保证向您提供最新的服务，由此可能带来的任何损失由您自行承担。<br />
     3.&nbsp;在适用法律允许的范围内，晋中碧涛网络科技有限公司有权随时自行决定暂停、终止、修改服务，或对部分用户暂停、终止、修改服务，且毋须另行通知。<br />
-    4.&nbsp;九州体育APP可能会包含至第三方平台或应用的链接、应用程序编程接口或软件开发工具包，晋中碧涛网络科技有限公司提供该等链接的目的仅在于向您提供方便，晋中碧涛网络科技有限公司对此不作任何保证，亦不代表晋中碧涛网络科技有限公司对该等第三方、其产品及服务的任何推荐、支持或授权，您应当自行甄别并自担风险。您在使用上述第三方的任何产品和服务时，应当了解并接受该等第三方的条款和规则。<br />
+    4.&nbsp;九州可能会包含至第三方平台或应用的链接、应用程序编程接口或软件开发工具包，晋中碧涛网络科技有限公司提供该等链接的目的仅在于向您提供方便，晋中碧涛网络科技有限公司对此不作任何保证，亦不代表晋中碧涛网络科技有限公司对该等第三方、其产品及服务的任何推荐、支持或授权，您应当自行甄别并自担风险。您在使用上述第三方的任何产品和服务时，应当了解并接受该等第三方的条款和规则。<br />
     5.&nbsp;因您自身的原因导致的任何损失或责任，由您自行负责，晋中碧涛网络科技有限公司不承担责任。晋中碧涛网络科技有限公司不承担责任的情形包括但不限于：<br />
     （1） 您未按照本协议或晋中碧涛网络科技有限公司不时公布的任何规则进行操作导致的任何损失或责任；<br />
     （2） 您未向晋中碧涛网络科技有限公司提供正确的联络方式，未能及时收到晋中碧涛网络科技有限公司相关通知导致的任何损失或责任；<br />
@@ -321,7 +321,7 @@
     2.&nbsp;尊重知识产权是您应尽的义务，如您有违反，造成晋中碧涛网络科技有限公司或相应权利人损失的，您需要承担损害赔偿责任。<br />
     &nbsp;<br />
     十一、关于未成年人的使用<br />
-    如果您是未成年人用户，并希望使用九州体育APP，请征得您的监护人的同意，并在您的监护人的指导、监督下使用。此外，您的监护人有责任帮助您正确理解本协议、《九州体育APP隐私政策》以及其它相关法律文件的内容，从而引导您正确使用九州体育APPAPP。<br />
+    如果您是未成年人用户，并希望使用九州，请征得您的监护人的同意，并在您的监护人的指导、监督下使用。此外，您的监护人有责任帮助您正确理解本协议、《九州隐私政策》以及其它相关法律文件的内容，从而引导您正确使用九州APP。<br />
     &nbsp;<br />
     十二、侵权内容的通知及未侵权通知程序<br />
     1.&nbsp;除了本协议的条款之外，为了保护知识产权及其他合法利益，如果任何个人或机构发现有用户通过使用晋中碧涛网络科技有限公司的服务侵犯了其合法权利或利益，上述任何个人或机构（以下称&ldquo;投诉方&rdquo;）需以书面形式向晋中碧涛网络科技有限公司提交侵权通知，且权利人需亲笔签名，若为机构，则需加盖机构公章。侵权通知应包括下列内容：<br />
