Update and rename strava.html to NRL.html

--- a/NRL.html
+++ b/NRL.html
@@ -1,4 +1,4 @@
-<h1>Privacy Policy for strava sports</h1>
+<h1>Privacy Policy for NRL</h1>
 
 <h1>&nbsp;</h1>
 
@@ -15,7 +15,7 @@
 <h2>&nbsp;</h2>
 
 <p>&nbsp;</p>
-<h1>Privacy Policy for strava sports</h1>
+<h1>Privacy Policy for NRL</h1>
 
 <h1>&nbsp;</h1>
 
@@ -61,7 +61,7 @@
 			&nbsp;</p>
 	</li>
 	<li>
-		<p>Application&nbsp;refers to strava sports, the software program provided by the Company.<br />
+		<p>Application&nbsp;refers to NRL, the software program provided by the Company.<br />
 			&nbsp;</p>
 	</li>
 	<li>
@@ -350,7 +350,7 @@
 			&nbsp;</p>
 	</li>
 	<li>
-		<p>Application&nbsp;refers to strava sports, the software program provided by the Company.<br />
+		<p>Application&nbsp;refers to NRL, the software program provided by the Company.<br />
 			&nbsp;</p>
 	</li>
 	<li>
