--- a/BK8.html
+++ b/BK8.html
@@ -1,4 +1,5 @@
-<h1>Privacy Policy for BK8</h1>
+
+<h1>Privacy Policy for BK8 WALES PLAY</h1>
 
 <h1>&nbsp;</h1>
 
@@ -15,7 +16,7 @@
 <h2>&nbsp;</h2>
 
 <p>&nbsp;</p>
-<h1>Privacy Policy for BK8</h1>
+<h1>Privacy Policy for BK8 WALES PLAY</h1>
 
 <h1>&nbsp;</h1>
 
@@ -61,7 +62,7 @@
 			&nbsp;</p>
 	</li>
 	<li>
-		<p>Application&nbsp;refers to BK8, the software program provided by the Company.<br />
+		<p>Application&nbsp;refers to BK8 WALES PLAY, the software program provided by the Company.<br />
 			&nbsp;</p>
 	</li>
 	<li>
@@ -350,7 +351,7 @@
 			&nbsp;</p>
 	</li>
 	<li>
-		<p>Application&nbsp;refers to BK8, the software program provided by the Company.<br />
+		<p>Application&nbsp;refers to BK8 WALES PLAY, the software program provided by the Company.<br />
 			&nbsp;</p>
 	</li>
 	<li>
