--- a/BK8.html
+++ b/BK8.html
@@ -237,10 +237,10 @@
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">请放心使用。</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span lang="EN" style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">-</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span></p>
 
-<p class="MsoNormal"><b>（三）电话权限的用途</b></p>
+   <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（三）电话权限的用途</span></p>
 <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我们请求拨打电话的权限，以便用户能够直接拨打客户服务电话或进行反馈。此权限的收集和使用仅限于提供更好的用户服务和支持，不会用于其他目的。</span></p>
 
-<p class="MsoNormal"><b>（四）OAID的用途</b></p>
+   <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（四）OAID的用途</span></p>
 <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我们可能会收集您的OAID以便进行广告投放和用户行为分析。我们承诺不会将OAID用于其他目的，并会遵循相关法律法规进行处理。</span></p>
 
     <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（五）复制和粘贴版权限</span></p>
@@ -264,7 +264,7 @@
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我们会通过友盟SDK收集<b>经过<span lang="EN">MD5</span>算法加密的国际移动设备身份码（<span lang="EN">IMEI</span>），以及手机型号、手机系统版本号、屏幕分辨率、上网类型、手机中软件的名称、版本号、包名、软件使用时间和频率、软件崩溃日志</b>用于统计我们产品的用户数量、分析产品的使用状况、排查崩溃原因、减少崩溃情况，以不断改进我们的产品。这些信息不涉及到您的个人身份等隐私信息。友盟SDK隐私权政策链接：<a href="https://www.umeng.com/page/policy">https://www.umeng.com/page/policy</a></span></p>
 
-    <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（9⃣️</span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）为您的安全提供保障</span></p>
+    <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（九</span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）为您的安全提供保障</span></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为提高您使用我们及我们关联公司、合作伙伴提供服务的安全性，保护您或其他用户或公众的人身财产安全免遭侵害，更好地预防钓鱼网站、欺诈、网络漏洞、计算机病毒、网络攻击、网络侵入等安全风险，更准确地识别违反法律法规或</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">老K棋牌资讯APP软件</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">相关协议规则的情况。<b>我们可能使用或整合您的账户信息、设备信息、软件使用信息以及我们关联公司、合作伙伴取得您授权或依据法律共享的信息，</b>用于进行身份验证、检测及防范安全事件，并依法采取必要的记录、审计、分析、处置措施。</span></p>
 
