--- a/qipai.html
+++ b/qipai.html
@@ -204,15 +204,16 @@
     <p class="MsoNormal"><b><span style="font-size:14.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">本隐私政策将帮助您了解以下内容：</span></b></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">一、相关定义<span lang="EN"><br>
-</span>二、我们如何收集和使用您的个人信息<span lang="EN"><br>
-</span>三、我们如何存储您的个人信息<span lang="EN"><br>
-</span>四、我们如何共享、转让、公开披露您的个人信息<span lang="EN"><br>
-</span>五、我们如何保护您的个人信息<span lang="EN"><br>
-</span>六、您管理个人信息的权利<span lang="EN"><br>
-</span>七、未成年人个人信息保护<span lang="EN"><br>
-</span>八、隐私政策的适用范围<span lang="EN"><br>
-</span>九、隐私政策的变更和修订<span lang="EN"><br>
-</span>十、如何联系我们</span></p>
+        </span>二、权限请求说明<span lang="EN"><br>
+</span>三、我们如何收集和使用您的个人信息<span lang="EN"><br>
+</span>四、我们如何存储您的个人信息<span lang="EN"><br>
+</span>五、我们如何共享、转让、公开披露您的个人信息<span lang="EN"><br>
+</span>六、我们如何保护您的个人信息<span lang="EN"><br>
+</span>七、您管理个人信息的权利<span lang="EN"><br>
+</span>八、未成年人个人信息保护<span lang="EN"><br>
+</span>九、隐私政策的适用范围<span lang="EN"><br>
+</span>十、隐私政策的变更和修订<span lang="EN"><br>
+</span>十一、如何联系我们</span></p>
 
     <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">一、相关定义</span></b></p>
 
@@ -220,7 +221,31 @@
 <b>2. </b></span><b>个人敏感信息：指包括身份证件号码、个人生物识别信息、银行账号、财产信息、行踪轨迹、交易信息、<span lang="EN">14</span>岁以下（含）儿童信息等的个人信息（我们将在本隐私权政策中对个人敏感信息以粗体进行显著标识）。<span lang="EN"><br>
 </span></b><span lang="EN">3. </span>个人信息删除：指在实现日常业务功能所涉及的系统中去除个人信息的行为，使其保持不可被检索、访问的状态。</span></p>
 
-    <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">二、我们如何收集和使用您的个人信息</span></b></p>
+    <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">二、权限请求说明</span></b></p>
+
+    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">在使用老K棋牌资讯APP软件时，我们可能会请求您授权某些权限，以便为您提供更好的服务和用户体验。以下是我们请求的主要权限及其用途：</span></p>
+
+    <ul>
+        <li><b>电话权限：</b>
+            <ul>
+                <li><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">用途：此权限用于允许用户直接拨打客户服务电话或进行反馈。</span></li>
+                <li><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">请求方式：在您首次打开应用时，我们将弹出提示窗口，说明请求电话权限的必要性，并征得您的同意。</span></li>
+            </ul>
+        </li>
+        <li><b>存储权限：</b>
+            <ul>
+                <li><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">用途：此权限用于读取和写入缓存，以确保应用的正常运行和数据存储。</span></li>
+                <li><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">请求方式：在您首次使用相关功能时，我们将弹出提示窗口，说明请求存储权限的必要性，并征得您的同意。</span></li>
+            </ul>
+        </li>
+
+    </ul>
+
+    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">用户有权选择是否授予这些权限。若您拒绝提供某些权限，可能会影响您使用部分功能，但不会影响您对核心功能的正常使用。</span></p>
+
+    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">您可以在手机的设置中随时管理应用的权限，撤回已授予的权限。我们将尊重您的选择，并确保您的个人信息安全。</span></p>
+
+    <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">三、我们如何收集和使用您的个人信息</span></b></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">您在使用老K棋牌资讯APP软件时，我们需要<span lang="EN">/</span>可能需要收集和使用您的一些个人信息，我们收集和使用的您的个人信息类型包括两种：<b>第一种：老K棋牌资讯APP软件产品与<span lang="EN">/</span>或服务的核心业务功能所必需的信息：此类信息为产品与<span lang="EN">/</span>或服务正常运行的必备信息，您须授权我们收集。如您拒绝提供，您将无法正常使用我们的产品或服务；第二种：附加业务功能可能需要收集的信息：此信息为非核心业务功能所需的信息，您可以选择是否授权我们收集。如您拒绝提供，将导致附加业务功能无法实现或无法达到我们拟达到的效果，但不影响您对核心业务功能的正常使用。</b></span></p>
 
@@ -286,7 +311,7 @@
 10. </span>学术研究机构基于公共利益开展统计或学术研究所必要，且对外提供学术研究或描述的结果时，对结果中所包含的个人信息进行去标识化处理的；<span lang="EN"><br>
 11. </span>法律法规规定的其他情形。</span></p>
 
-    <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">三、我们如何存储您的个人信息</span></b></p>
+    <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">四、我们如何存储您的个人信息</span></b></p>
 
     <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（一）存储地域</span></p>
 
@@ -297,7 +322,7 @@
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我们仅在本政策所属目的的所必须期间和法律法规要求的时限内存储您的个人信息。在超出上述存储期限后，我们会对您的个人信息进行删除或匿名化处理。</span></p>
 
-    <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">四、我们如何共享、转让、公开披露您的个人信息</span></b></p>
+    <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">五、我们如何共享、转让、公开披露您的个人信息</span></b></p>
 
     <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（一）共享</span></p>
 
@@ -322,7 +347,7 @@
 2. </span>在法律、法律程序、诉讼或政府主管部门强制性要求的情况下，我们可能会公开披露您的个人信息。<span lang="EN"><br>
 3. </span>法律法规规定的其他情形。</span></p>
 
-    <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">五、我们如何保护您的个人信息</span></b></p>
+    <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">六、我们如何保护您的个人信息</span></b></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我们已采取符合业界标准的安全防护措施保护您提供的个人信息，防止数据遭到未经授权访问、公开披露、使用、修改、损坏或丢失。我们会采取一切合理可行的措施，保护您的个人信息。<span lang="EN"><br>
 1. </span>我们会对可识别的个人身份信息进行加密传输和存储，以确保数据的保密性。对于您手机设备标识符国际移动设备身份码（<span lang="EN">IMEI</span>），我们在您的设备端会用<span lang="EN">MD5</span>算法进行匿名化和加密，并仅收集和上传经过匿名化和加密后的标识符。<span lang="EN"><br>
@@ -335,7 +360,7 @@
 6. </span>我们为工作人员定期举办个人信息保护相关法律法规培训，以加强工作人员的用户个人隐私保护意识。<span lang="EN"><br>
 7. </span>如果不幸发生我们的物理、技术或管理防护措施遭到破坏的事件，我们会及时启动应急预案，防止安全事件扩大，按照法律法规的要求上报国家主管机关，并及时采取推送、公告等合理、有效的方式向您告知安全事件的基本情况、可能的影响、已经采取的措施或将要采取的措施等。</span></p>
 
-    <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">六、您管理个人信息的权利</span></b></p>
+    <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">七、您管理个人信息的权利</span></b></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">在您使用老K棋牌资讯APP软件期间，您可以通过以下方式访问并管理您的个人信息：</span></p>
 
@@ -354,12 +379,12 @@
 5. </span>我们停止对您提供服务。<span lang="EN"><br>
 </span>您可以通过本隐私政策第九节提供的方式联系我们要求删除您的个人信息，我们会在<span lang="EN">15</span>个工作日内给予答复。当我们从服务器中删除您的个人信息后，我们可能不会立即从备份系统中删除相应的数据，但会在备份更新的时候删除这些信息。</span></p>
 
-    <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">七、未成年人个人信息保护</span></b></p>
+    <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">八、未成年人个人信息保护</span></b></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">未成年人使用我们的产品与<span lang="EN">/</span>或服务之前应首先取得其监护人的同意。如您为未成年人，在使用我们的产品与<span lang="EN">/</span>或服务前，应在监护人监护、指导下共同阅读本《老K棋牌资讯APP软件》，且应在监护人明确同意和指导下使用我们的产品与<span lang="EN">/</span>或服务、提交个人信息。我们根据国家相关法律法规的规定保护未成年人的个人信息，只会在法律法规允许、监护人明确同意或保护您的权益所必要的情况下收集、使用或公开披露未成年人的个人信息；若您是未成年人的监护人，当您对您所监护的未成年人的个人信息有相关疑问时，请通过“如何联系我们”章节中的联系方式与我们联系。如果我们发现在未事先获得可证实的监护人同意的情况下收集了未成年人的个人信息，则会设法尽快删除相关数据。
 </span></p>
 
-    <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">八、隐私政策的适用范围</span></b></p>
+    <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">九、隐私政策的适用范围</span></b></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">本隐私政策仅适用于老K棋牌资讯APP软件。</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我司</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">的其他产品和服务将使用相关产品或服务的隐私政策。特别需要说明的是，本隐私政策不适用以下情况：<span lang="EN"><br>
 1. </span>将</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我司产品</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（或服务）嵌入到第三方产品（或服务），第三方产品（或服务）收集的信息。<span lang="EN"><br>
@@ -439,7 +464,7 @@
 
         </tbody></table>
 
-    <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">九、隐私政策的变更和修订</span></b></p>
+    <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">十、隐私政策的变更和修订</span></b></p>
 
     <p class="MsoNormal"><b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我们鼓励您在每次使用我们的产品或服务时都查阅我们的《老K棋牌资讯APP软件》。</span></b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为了给您提供更好的服务，我们会根据产品的更新情况及法律法规的相关要求更新本《老K棋牌资讯APP软件》的条款，该类更新构成本《老K棋牌资讯APP软件》的一部分。未经您明确同意，我们不会限制您按照本隐私政策所应享有的权利。</span></p>
 
@@ -451,7 +476,7 @@
 4. </span>您参与个人信息处理方面的权利及其行使方式发生重大变化；<span lang="EN"><br>
 5. </span>我们负责处理个人信息安全的责任部门、联络方式及投诉渠道发生变化时；<span lang="EN"><br>
 6. </span>个人信息安全影响评估报告表明存在高风险时。</span></p>
-    <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">十、如何联系我们</span></b></p>
+    <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">十一、如何联系我们</span></b></p>
     <p class="MsoNormal">
         如果您对我们的隐私政策及对您个人信息的处理有任何疑问、意见、建议或投诉，请通过以下方式与我们联系：<br>
         公司名称：海口南霄网络科技有限公司<br>
