--- a/BK8.html
+++ b/BK8.html
@@ -66,11 +66,11 @@
 			&nbsp;</p>
 	</li>
 	<li>
-		<p>Company&nbsp;(referred to as either &quot;the Company&quot;, &quot;We&quot;, &quot;Us&quot; or &quot;Our&quot; in this Agreement) refers to Xiongxian Huidong Network Technology Co., Ltd.,  No. 212, Gonggang Village, Shuangtang Township, Xiong County, Baoding City, Hebei Province.<br />
+		<p>Company&nbsp;(referred to as either &quot;the Company&quot;, &quot;We&quot;, &quot;Us&quot; or &quot;Our&quot; in this Agreement) refers to Hong Kong Shanxing Consulting Asset Management Co., Ltd.,  Room 9042, 9/F, Block B, China-America Centre, 15-17 Hing Yip Street, Kwun Tong, Kowloon, Hong Kong.<br />
 			&nbsp;</p>
 	</li>
 	<li>
-		<p>Country&nbsp;refers to: Shenzhen, China<br />
+		<p>Country&nbsp;refers to: Hong Kong，China<br />
 			&nbsp;</p>
 	</li>
 	<li>
