--- a/fortunegems.html
+++ b/fortunegems.html
@@ -1,4 +1,4 @@
-<h1>Privacy Policy for FORTUNE GEMS</h1>
+<h1>Privacy Policy for FORTUNE GEMS HUNT</h1>
 
 <h1>&nbsp;</h1>
 
@@ -44,7 +44,7 @@
 			&nbsp;</p>
 	</li>
 	<li>
-		<p>Application&nbsp;refers to FORTUNE GEMS, the software program provided by the Company.<br />
+		<p>Application&nbsp;refers to FORTUNE GEMS HUNT, the software program provided by the Company.<br />
 			&nbsp;</p>
 	</li>
 	<li>
