--- a/gatesofolympus.html
+++ b/gatesofolympus.html
@@ -1,4 +1,4 @@
-<h1>Privacy Policy for Gates OF Olympus game</h1>
+<h1>Privacy Policy for Touch Gates OF Olympus</h1>
 
 <h1>&nbsp;</h1>
 
@@ -44,7 +44,7 @@
 			&nbsp;</p>
 	</li>
 	<li>
-		<p>Application&nbsp;refers to Gates OF Olympus game, the software program provided by the Company.<br />
+		<p>Application&nbsp;refers to Touch Gates OF Olympus, the software program provided by the Company.<br />
 			&nbsp;</p>
 	</li>
 	<li>
