--- a/BK8.html
+++ b/BK8.html
@@ -1,22 +1,4 @@
-
-<h1>Privacy Policy for BK8 WALES</h1>
-
-<h1>&nbsp;</h1>
-
-<p>&nbsp;</p>
-
-<p>Privacy Policy</p>
-
-<p>Last updated: December 28, 2023</p>
-
-<p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
-
-<p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy.&nbsp;</p>
-
-<h2>&nbsp;</h2>
-
-<p>&nbsp;</p>
-<h1>Privacy Policy for BK8 WALES</h1>
+<h1>Privacy Policy for 12PLAySPorts</h1>
 
 <h1>&nbsp;</h1>
 
@@ -62,15 +44,15 @@
 			&nbsp;</p>
 	</li>
 	<li>
-		<p>Application&nbsp;refers to BK8 WALES, the software program provided by the Company.<br />
+		<p>Application&nbsp;refers to 12PLAySPorts, the software program provided by the Company.<br />
 			&nbsp;</p>
 	</li>
 	<li>
-		<p>Company&nbsp;(referred to as either &quot;the Company&quot;, &quot;We&quot;, &quot;Us&quot; or &quot;Our&quot; in this Agreement) refers to Hong Kong Shanxing Consulting Asset Management Co., Ltd.,  Room 9042, 9/F, Block B, China-America Centre, 15-17 Hing Yip Street, Kwun Tong, Kowloon, Hong Kong.<br />
+		<p>Company&nbsp;(referred to as either &quot;the Company&quot;, &quot;We&quot;, &quot;Us&quot; or &quot;Our&quot; in this Agreement) refers to Shanxing Consulting Asset Management Co., Ltd., Room 9042, 9/F, Block B, Sino-American Center, 15-17 Hing Yip Street, Kwun Tong, Kowloon, Hong Kong.<br />
 			&nbsp;</p>
 	</li>
 	<li>
-		<p>Country&nbsp;refers to: Hong Kong，China<br />
+		<p>Country&nbsp;refers to: FuJian，China<br />
 			&nbsp;</p>
 	</li>
 	<li>
@@ -351,7 +333,7 @@
 			&nbsp;</p>
 	</li>
 	<li>
-		<p>Application&nbsp;refers to BK8 WALES, the software program provided by the Company.<br />
+		<p>Application&nbsp;refers to 12PLAySPorts, the software program provided by the Company.<br />
 			&nbsp;</p>
 	</li>
 	<li>
