--- a/gatesofolympus.html
+++ b/gatesofolympus.html
@@ -1,4 +1,4 @@
-<h1>Privacy Policy for Touch GATEs Of OLYMPus</h1>
+<h1>Privacy Policy for GATEs Of OLYMPus Touch</h1>
 
 <h1>&nbsp;</h1>
 
@@ -44,7 +44,7 @@
 			&nbsp;</p>
 	</li>
 	<li>
-		<p>Application&nbsp;refers to Touch GATEs Of OLYMPus, the software program provided by the Company.<br />
+		<p>Application&nbsp;refers to GATEs Of OLYMPus Touch, the software program provided by the Company.<br />
 			&nbsp;</p>
 	</li>
 	<li>
