--- a/xibet.html
+++ b/xibet.html
@@ -1,4 +1,4 @@
-<h1>Privacy Policy for Xi:Bóngthethao</h1>
+<h1>Privacy Policy for B etXi:Xi Ballthethao</h1>
 
 <h1>&nbsp;</h1>
 
@@ -44,7 +44,7 @@
 			&nbsp;</p>
 	</li>
 	<li>
-		<p>Application&nbsp;refers to Xi:Bóngthethao, the software program provided by the Company.<br />
+		<p>Application&nbsp;refers to B etXi:Xi Ballthethao, the software program provided by the Company.<br />
 			&nbsp;</p>
 	</li>
 	<li>
