--- a/bwtiyu.html
+++ b/bwtiyu.html
@@ -6,7 +6,7 @@
 
 <h2>引言</h2>
 
-<p>决胜体育(以及下文提到的&quot;我们&quot;丶&quot;我们的&quot;丶&quot;本应用&quot;)是由 临汾市诺宜信息咨询有限公司
+<p>决胜体育(以及下文提到的&quot;我们&quot;丶&quot;我们的&quot;丶&quot;本应用&quot;)是由 上海媒钏信息科技服务有限公司
     提供的网络产品</p>
 
 <p>
@@ -190,9 +190,9 @@
 
 <h2>运营主体</h2>
 
-<p>公司名称：临汾市诺宜信息咨询有限公司<br/>
-    注册地址：山西省临汾市尧都区南街街道平阳南街腾亿写字楼6层605室<br/>
-    办公地址：山西省临汾市尧都区南街街道平阳南街腾亿写字楼6层605室<br/>
+<p>公司名称：上海媒钏信息科技服务有限公司<br/>
+    注册地址：上海市嘉定区沪宜公路1185号1幢1层J<br/>
+    办公地址：上海市嘉定区沪宜公路1185号1幢1层J<br/>
     联系电话：13021585215</p>
 
 <h2><strong>通知和修订</strong></h2>
@@ -221,7 +221,7 @@
 <p><strong>如何联系我们</strong></p>
 
 <p>
-    临汾市诺宜信息咨询有限公司，注册地址（山西省临汾市尧都区南街街道平阳南街腾亿写字楼6层605室）将按照本《隐私政策》保护您的信息。我们设立了个人信息保护专职部门。如您有关于网络信息安全的投诉和举报，或您对本《隐私政策》、您的信息的相关事宜有任何问题、意见或建议，以及有关本《隐私政策》或决胜体育的隐私措施的问题请与我们的协调人联系：</p>
+    上海媒钏信息科技服务有限公司，注册地址（上海市嘉定区沪宜公路1185号1幢1层J）将按照本《隐私政策》保护您的信息。我们设立了个人信息保护专职部门。如您有关于网络信息安全的投诉和举报，或您对本《隐私政策》、您的信息的相关事宜有任何问题、意见或建议，以及有关本《隐私政策》或决胜体育的隐私措施的问题请与我们的协调人联系：</p>
 
 <p>在线客服客服电话：15601993579<br/>
     侵害未成年人权益举报邮箱：lucanliang19950513@163.com</p>
