--- a/tybifen.html
+++ b/tybifen.html
@@ -6,7 +6,7 @@
 
 <h2>引言</h2>
 
-<p>风采体育(以及下文提到的&quot;我们&quot;丶&quot;我们的&quot;丶&quot;本应用&quot;)是由 运城市盐湖区塔舒瑾科技有限公司
+<p>风采体育(以及下文提到的&quot;我们&quot;丶&quot;我们的&quot;丶&quot;本应用&quot;)是由 晋中碧涛网络科技有限公司
     提供的网络产品</p>
 
 <p>
@@ -190,9 +190,9 @@
 
 <h2>运营主体</h2>
 
-<p>公司名称：运城市盐湖区塔舒瑾科技有限公司<br/>
-    注册地址：山西省运城市盐湖区凤凰南路御凤苑19号底商-552室<br/>
-    办公地址：山西省运城市盐湖区凤凰南路御凤苑19号底商-552室<br/>
+<p>公司名称：晋中碧涛网络科技有限公司<br/>
+    注册地址：山西省晋中市榆次区安宁街道广安街299号巨燕财富广场三号楼二层（晋中鑫起点创业空间服务有限公司B区711号）集群登记<br/>
+    办公地址：山西省晋中市榆次区安宁街道广安街299号巨燕财富广场三号楼二层（晋中鑫起点创业空间服务有限公司B区711号）集群登记<br/>
     联系电话：13021585215</p>
 
 <h2><strong>通知和修订</strong></h2>
@@ -221,7 +221,7 @@
 <p><strong>如何联系我们</strong></p>
 
 <p>
-    运城市盐湖区塔舒瑾科技有限公司，注册地址（山西省运城市盐湖区凤凰南路御凤苑19号底商-552室）将按照本《隐私政策》保护您的信息。我们设立了个人信息保护专职部门。如您有关于网络信息安全的投诉和举报，或您对本《隐私政策》、您的信息的相关事宜有任何问题、意见或建议，以及有关本《隐私政策》或风采体育的隐私措施的问题请与我们的协调人联系：</p>
+    晋中碧涛网络科技有限公司，注册地址（山西省晋中市榆次区安宁街道广安街299号巨燕财富广场三号楼二层（晋中鑫起点创业空间服务有限公司B区711号）集群登记）将按照本《隐私政策》保护您的信息。我们设立了个人信息保护专职部门。如您有关于网络信息安全的投诉和举报，或您对本《隐私政策》、您的信息的相关事宜有任何问题、意见或建议，以及有关本《隐私政策》或风采体育的隐私措施的问题请与我们的协调人联系：</p>
 
 <p>在线客服客服电话：15601993579<br/>
     侵害未成年人权益举报邮箱：lucanliang19950513@163.com</p>
