--- a/jinhui2.html
+++ b/jinhui2.html
@@ -1,173 +1,260 @@
-<h1>隐私政策</h1>
-
-<p>更新日期：2024年5月13日</p>
-
-<p>生效日期：2024年5月13日</p>
-
-<h2>引言</h2>
-
-<p>森林舞会(以及下文提到的&quot;我们&quot;丶&quot;我们的&quot;丶&quot;本应用&quot;)是由 海口南霄网络科技有限公司  提供的网络产品</p>
-
-<p>本应用(森林舞会)严格遵守法律法规，遵循以下隐私保护原则。您在使用我们的应用时，我们可能会收集和使用您的信息。《隐私政策》将向您说明在您使用我们的服务时，我们如何收集、使用这些信息。我们将以高度的勤勉、审慎义务对待这些信息，并按照本隐私权政策的规定使用和披露您的个人信息。您在使用或继续使用我们的服务，都视为您已经同意本隐私政策的全部内容，您同意我们按照本《隐私政策》收集、使用您的信息。</p>
-
-<h2>我们收集的信息</h2>
-
-<p>我们根据合法、正当、必要的原则，仅收集实现产品功能所必要的信息。若您选择不提供该类信息，则可能无法正常使用服务中的特定功能，但不影响您使用服务中的其他功能。</p>
-
-<p>设备和技术信息的收集：</p>
-
-<p>我们自动获得有关您的设备的某些信息，包括 IP 地址，国家法典，时区会话开始/停止时间；IDFVs，语言；网络状态 (无线等)，浏览器插件类型和版本；平台，SDK 版本，时间戳；技术设备信息 (如设备型号和名称、操作系统名称和版本、CPU 信息、存储大小、屏幕大小、固件、应用程序的软件 API 密钥标识符、通知令牌、imei、imsi、idfa、mac、androidId)，收集软件安装列表、位置、设备MAC地址信息，用于应用统计和识别区分用户，方便后续改进应用。虽然这些信息(如IDFV、IP地址)可能唯一地标识您的设备，但此信息并没有亲自识别您。某些立法 可以将您的设备唯一标识为个人信息的信息处理。</p>
-
-<p>常规个人信息收集：</p>
-
-<p>在使用我们的服务时，我们可能会要求您向我们提供可用于联系或识别您的某些个人身份信息（&ldquo;个人数据&rdquo;），个人身份信息可能包括但不限于：电子邮件地址</p>
-
-<h2>我们如何管理信息</h2>
-
-<p>您可以在使用我们服务的过程中，访问、修改和注销您提供的账户信息和其他个人信息，如有疑问，也可以通过客服与我们联系。通过联系客服人员，查询、更新、提供或者注销个人信息。&nbsp;在您的森林舞会账号注销之后，我们将停止为您提供森林舞会服务，并依据您的要求，删除您的个人信息或做匿名化处理，但法律法规另有规定的除外。</p>
-
-<p>(一) 访问、更新和删除</p>
-
-<p>我们鼓励您更新和修改您的信息，以使其更准确有效。您能通过森林舞会访问您的信息，并根据对应信息的管理方式自行完成或要求我们进行修改、补充和删除。我们将采取适当的技术手段或提供提交申请的联系渠道，尽可能保证您可以访问、更新和更正自己的信息或使用森林舞会时提供的其他信息。如您想查询、修改或删除您的部分信息，请登录森林舞会进行相关操作，或者通过《隐私政策》中载明的联系方式联系我们进行处理。</p>
-
-<p>(二) 改变您授权同意的范围</p>
-
-<p>您总是可以选择是否披露信息。有些信息是使用森林舞会所必需的，但大多数其他信息的提供是由您决定的。您可以通过删除信息、关闭设备功能等方式改变您授权我们继续收集信息的范围或撤回您的授权。</p>
-
-<p>您可以在设备本身的操作系统中关闭存储权限，改变您同意授权的范围或撤回您的授权。您撤回授权后，我们将不再收集与这些权限相关信息。但当您撤回有关授权后，我们无法继续为您提供这些授权所对应的服务。但您撤回授权的决定，不会影响此前基于您的授权而开展的信息处理。</p>
-
-<h2><strong>我们如何保护信息安全</strong></h2>
-
-<p>我们非常重视个人信息安全，成立了专门的安全团队，并采取一切合理可行的措施，保护您的信息。</p>
-
-<p>1. 数据安全技术措施</p>
-
-<p>我们会采用符合业界标准的安全防护措施，包括建立合理的制度规范、安全技术来防止您的信息遭到未经授权的访问使用、修改，避免数据的损坏或丢失。网络服务采取了多种加密技术。在信息使用时，例如信息展示、信息关联计算，我们会采用多种数据脱敏技术增强信息在使用中安全性。采用严格的数据访问权限控制和多重身份认证技术保护信息，避免数据被违规使用。</p>
-
-<p>2. 个人信息保护管理措施</p>
-
-<p>我们设立了个人信息保护专职部门，并通过建立数据分类分级制度、数据安全管理规范、数据安全开发规范来管理规范信息的存储和使用。</p>
-
-<p>我们通过信息接触者保密协议、监控和审计机制来对数据进行全面安全控制。</p>
-
-<p>我们还会举办安全和隐私保护培训课程，加强员工对于保护信息重要性的认识。</p>
-
-<p>3. 保密措施</p>
-
-<p>我们仅允许有必要知晓这些信息的森林舞会员工访问您的信息，并为此设置了严格的访问权限控制和监控机制。我们同时要求可能接触到您的个人信息的所有人员履行相应的保密义务。如果未能履行这些义务，可能会被追究法律责任或被中止与森林舞会的合作关系。</p>
-
-<p>4. 安全事件处置</p>
-
-<p>为应对信息泄露、损毁和丢失等可能出现的风险，我们制定了多项制度，明确安全事件、安全漏洞的分类分级标准及相应的处理流程。我们也为安全事件建立了专门的应急响应团队，按照安全事件处置规范要求，针对不同安全事件启动安全预案，进行止损、分析、定位、制定补救措施、联合相关部门进行溯源和打击。</p>
-
-<p>在不幸发生信息安全事件后，我们将按照法律法规的要求，及时向您告知：安全事件的基本情况和可能的影响、我们已采取或将要采取的处置措施、您可自主防范和降低风险的建议、对您的补救措施等。我们同时将及时将事件相关情况以邮件、信函、电话、通知等方式告知您，难以逐一告知信息主体时，我们会采取合理、有效的方式发布公告。同时，我们还将按照监管部门要求，主动上报信息安全事件的处置情况。</p>
-
-<p>请您理解，由于技术的限制以及风险防范的局限，即便我们已经尽量加强安全措施，也无法始终保证信息百分之百的安全。您需要了解，您接入森林舞会所用的系统和通讯网络，有可能因我们可控范围外的情况而发生问题。</p>
-
-<p>互联网并非绝对安全的环境，而且电子邮件、即时通讯、社交软件或其他服务软件等与其他用户的交流方式无法确定是否完全加密，我们建议您使用此类工具时请使用复杂密码，并注意保护您的信息安全。同时，我们将尽力确保或担保您发送给我们的任何信息的安全性。</p>
-
-<h2>数据传输</h2>
-
-<p>您的信息（包括个人数据）可能会被转移到您所在州，省，国家或其他政府管辖范围之外的计算机上，并且这些计算机的数据保护法可能与您所在司法管辖区的数据保护法不同。如果您位于中国境外并选择向我们提供信息，请注意我们将数据（包括个人数据）传输到中国并在中国处理。</p>
-
-<h2>数据披露</h2>
-
-<p>履行法律义务。</p>
-
-<p>保护和捍卫本软件的权利或财产</p>
-
-<p>保护服务或公众用户的人身安全</p>
-
-<h2>链接到其他网站</h2>
-
-<p>我们的服务可能包含指向非我们运营的其他网站的链接。如果您点击第三方链接，您将被引导至该第三方的网站。我们强烈建议您查看您访问的每个站点的隐私政策。 我们无法控制任何第三方网站或服务的内容，隐私政策或做法，也不承担任何责任。</p>
-
-<h2>删除信息</h2>
-
-<p>当不再需要信息时，我们将使用合理的措施删除它，以保护信息不被未经授权的访问或使用。用户上传的内容如果涉嫌黄色、暴力不受欢迎内容我们将有权进行删除，用户可以进行举报。</p>
-
-<h2>保护信息</h2>
-
-<p>我们已经实施了合理的安全措施，以保障收集信息的机密性、安全性和完整性，并防止未经授权的访问和使用违反本隐私政策的信息。虽然我们采取合理的努力，以保障您的信息在我们维护时依然安全，但请注意，没有任何安全措施是绝对安全的。</p>
-
-<h2>cookie技术</h2>
-
-<p>我们使用cookie和类似的跟踪技术来跟踪我们服务上的活动并保留某些信息。<br />
-    Cookie是包含少量数据的文件，可能包含匿名唯一标识符。Cookie会从网站发送到您的浏览器并存储在您的设备上。还使用其他跟踪技术比如信标，标签和脚本等，用于收集和跟踪信息以及改进和分析我们的服务。<br />
-    您可以指示您的浏览器拒绝所有cookie或指示何时发送cookie。但是，如果您不接受cookie，您可能无法使用我们服务的某些部分。<br />
-    我们使用的Cookie示例：<br />
-    会话Cookie。我们使用Session Cookies来运营我们的服务。<br />
-    偏好Cookie。我们使用首选项Cookie来记住您的偏好和各种设置。<br />
-    安全Cookies。出于安全考虑，我们使用安全Cookie。</p>
-
-<h2>与儿童有关的信息资料收集</h2>
-
-<p>我们非常重视对未成年人个人信息的保护。如果你是14周岁以下的未成年人，在使用我们的服务前，应确保事先取得监护人的同意，如果你是已满14不满18岁的未成年人，在使用我们服务前，应确保事先取得本人或监护人的同意。如果我们得知已收集了14周岁以下儿童的个人资料，我们会采取一切合理步骤，尽快删除有关资料。如果您知道您的孩子在未经您同意的情况下向我们提供了个人信息, 请与我们联系</p>
-
-
-<h2>权限信息说明：</h2>
-
-<p>&nbsp;</p>
-
-<table border="1" cellpadding="1" cellspacing="1">
-    <tbody>
-    <tr>
-        <td>权限名称</td>
-        <td>权限功能说明</td>
-        <td>使用场景或目的</td>
-    </tr>
-    <tr>
-        <td>网络状态权限(android.permission.ACCESS_NETWORK_STATE)</td>
-        <td>用于判断是否有网</td>
-        <td>数据加载，无网加载本地数据库内容；有网，重新获取数据</td>
-    </tr>
-    </tbody>
-</table>
-
-<h2>撤销已同意的隐私政策</h2>
-
-<p>流程：设置-我的-撤销已同意的隐私政策或者发邮件给junun36201@163.com申请，如果您通过发送电子邮件的方式申请，我们核查后会在15日内为您撤销，根据本隐私政策，您可以从您的每台设备上撤销并卸载所有应用程序并停止使用，从而永远自由地选择不参与将来在软件内收集您的个人信息。</p>
-
-<h2>支持</h2>
-
-<p>如果您对本隐私政策有任何疑问，请通过邮件联系我们：<a href="mailto:fjunun36201@163.com">junun36201@163.com</a></p>
-
-<p>或者通过森林舞会APP的意见反馈与我们取得联系，点击我的-意见反馈</p>
-
-<h2>投诉举报</h2>
-
-<p>如果您认为您的个人信息权利受到侵害，或者发现侵害个人信息权利的线索，您可以通过发送邮件junun36201@163.com进行投诉或举报，我们核查后会在15日内反馈您的投诉和举报</p>
-
-<h2>运营主体</h2>
-
-<p>公司名称：海口南霄网络科技有限公司 <br />
-    注册地址：湖南省长沙市芙蓉区火星街道远大一路719号办公楼401房-B1001号<br />
-    办公地址：湖南省长沙市芙蓉区火星街道远大一路719号办公楼401房-B1001号<br />
-    联系电话：0791-883301199</p>
-
-<h2><strong>通知和修订</strong></h2>
-
-<p>（一）我们可能适时修改《隐私政策》的条款，该等修改构成《隐私政策》的一部分。我们会在森林舞会内发出《隐私政策》的更新版本，或以其他适当方式提醒您相关内容的更新。</p>
-
-<p>（二）我们可能在必需时（例如当我们由于系统维护而暂停某一项服务时）发出与服务有关的公告。您可能无法取消这些与服务有关、性质不属于推广的公告。</p>
-
-<p>您可以在森林舞会各产品客户端的最新版本中查阅相关协议条款，森林舞会也会在各产品客户端的显著界面位置公示。您有权不接受修改后的《隐私政策》，但可能会导致您需要停止使用森林舞会提供的某项软件或服务。</p>
-
-<p><strong>特别声明</strong></p>
-
-<p>鉴于：中华人民共和国《合同法》第39条规定：采用格式条款订立合同的，提供格式条款的一方应当遵循公平原则确定当事人之间的权利和义务，并采取合理的方式提请对方注意免除或者限制其责任的条款，按照对方的要求，对该条款予以说明。</p>
-
-<p>森林舞会在此依法作出特别声明如下：</p>
-
-<p>森林舞会采取合理的方式提请用户注意的义务将通过如下方式实现：在《隐私政策》中森林舞会以明确的足以引起用户注意的加重字体、斜体、下划线、颜色标记等合理方式提醒用户注意相关条款（需要强调的是，还包括用户应特别注意任何未明确标记的含有&ldquo;不承担&rdquo;、&ldquo;免责&rdquo;、&ldquo;不得&rdquo;等形式用于的条款），该条款的确认将导致用户在特定情况下的被动、不变、损失，请用户在确认同意本协议之前再次阅读上述条款。双方确认上述条款并非属于《合同法》第40条规定的&ldquo;免除其责任、加重对方责任、排除对方主要权利&rdquo;的条款。</p>
-
-<p>&nbsp;</p>
-
-<p><strong>如何联系我们</strong></p>
-
-<p>海口南霄网络科技有限公司 ，注册地址（湖南省长沙市芙蓉区火星街道远大一路719号办公楼401房-B1001号）将按照本《隐私政策》保护您的信息。我们设立了个人信息保护专职部门。如您有关于网络信息安全的投诉和举报，或您对本《隐私政策》、您的信息的相关事宜有任何问题、意见或建议，以及有关本《隐私政策》或森林舞会的隐私措施的问题请与我们的协调人联系：</p>
-
-<p>在线客服客服电话：15601993579<br />
-    侵害未成年人权益举报邮箱：junun36201@163.com</p>
-
-<p>&nbsp;</p>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <title>隐私政策</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+
+<p>生效日期：2026年1月25日</p>
+
+<p>最近更新和发布日期：2026年1月25日（取代先前版本）</p>
+
+<p>
+    我们的应用程序森林舞会，以下称“本应用”。本应用尊重并保护所有使用服务用户的个人隐私权。
+    为了给您提供更准确的服务，本应用会按照本隐私权政策的规定使用和披露您的个人信息。
+    但本应用将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，
+    在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。
+    本应用会不时更新本隐私权政策。 您在同意本应用服务使用协议之时，
+    即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本应用服务使用协议不可分割的一部分。
+</p>
+
+<h2>1. 我们如何收集和使用您的个人信息</h2>
+
+<p>
+    个人信息是指以电子或者其他方式记录的能够单独或者与其他信息结合识别特定自然人身份
+    或者反映特定自然人活动情况的各种信息。
+    我们仅会出于本政策所述的以下目的，收集和使用您的个人信息：
+</p>
+
+<ul>
+    <li>我们不出售任何商品，同时也不展示任何商品</li>
+    <li>开展内部数据分析和研究，第三方SDK统计服务，改善我们的产品或服务</li>
+    <li>我们收集数据是根据您与我们的互动和您所做出的选择，包括您的隐私设置以及您使用的产品和功能。我们收集的数据可能包括：</li>
+</ul>
+
+<ul>
+    <li>(a) 在浏览时，我们可能会申请系统设备权限收集设备信息、日志信息、用于信息和安全风控，并申请存储权限，用于下载以及缓存相关文件。</li>
+    <li>(b) 我们可能会申请获取用户的IMEI,软件安装列表,MAC地址权限，拥有识别唯一用户信息跟更新应用程序。</li>
+    <li>(c) 我们可能会申请位置权限，用于帮助你定位信息中展示位置。</li>
+    <li>(d) 我们可能会用到手机连接设备进行相机，点击拍照功能。</li>
+    <li>(e) 上述权限以及摄像头、相册、存储空间、GPS等敏感权限不会默认或强制开启收取信息。</li>
+    <li>(f) 用户超过三个月有效期未使用账号功能，相关账号会自动注销处理，账号相关信息自动删除。</li>
+</ul>
+
+<p>您了解并同意，以下信息不适用本隐私权政策：</p>
+
+<ul>
+    <li>(a) 您在使用本应用平台提供的搜索服务时输入的关键字信息；</li>
+    <li>(b) 本应用收集到的您在本应用发布的有关信息数据，包括但不限于参与活动、成交信息及评价详情；</li>
+    <li>(c) 违反法律规定或违反本应用规则行为及本应用已对您采取的措施。</li>
+</ul>
+
+<h2>2、您对您的个人信息享有的权利</h2>
+
+<p>
+    根据您所适用的国家或地区法律法规，您有权要求访问、更正、删除我们持有的与您相关的任何个人信息（以下简称请求）。
+</p>
+
+<p>
+    大多数法律要求个人信息主体提出的请求应遵循特定要求，本隐私政策要求您的请求应当符合以下情形：
+</p>
+
+<ul>
+    <li>通过我们专门的请求渠道，并且出于保护您的信息安全的考虑，您的请求应当是书面的（除非当地法律明确承认口头申请）；</li>
+    <li>提供足够的信息使我们可以验证您的身份，确保请求人是所请求信息主体本人或合法授权人；</li>
+</ul>
+
+<p>
+    一旦我们获得充分信息确认可处理您的请求时，我们将在适用数据保护法律规定的时间内对您的请求做出回应。具体而言：
+</p>
+
+<ul>
+    <li>基于您的要求及适用法律规定，我们可免费提供一份我们已收集并处理的关于您的个人信息记录， 如您提出对于相关信息的其他请求，我们可能会基于相关适用法律，并结合实际的管理成本向您收取一笔合理的费用。</li>
+    <li>如果您认为我们持有的关于您的任何信息是不正确或不完整的，可要求基于使用目的更正或完善个人信息。</li>
+    <li>根据您适用的法律法规，您可能有权要求我们删除您的个人数据。我们将会根据您的删除请求进行评估，若满足相应规定，我们将会采取包括技术手段在内的相应步骤进行处理。当您或我们协助您删除相关信息后，因为适用的法律和安全技术，我们可能无法立即从备份系统中删除相应的信息，我们将安全地存储您的个人信息并将其与任何进一步处理隔离，直到备份可以清除或实现匿名。</li>
+</ul>
+
+<p>
+    我们有权拒绝处理无实质意义/纠缠式重复的请求、损害他人隐私权的请求、极端不现实的请求，
+    要求不相称的技术工作，以及根据当地法律无需给予的请求，已经公之于众的信息，
+    保密条件下给出的信息。如果我们认为删除数据或访问数据的请求的某些方面可能会导致我们无法
+    出于前述反欺诈和安全目的合法使用数据，可能也会予以拒绝。
+</p>
+
+<h2>3. 信息使用</h2>
+
+<ul>
+    <li>(a)本应用不会向任何无关第三方提供、出售、出租、分享或交易您的个人信息，除非事先得到您的许可，或该第三方和本应用（含本应用关联公司）单独或共同为您提供服务，且在该服务结束后，其将被禁止访问包括其以前能够访问的所有这些资料。</li>
+    <li>(b) 本应用亦不允许任何第三方以任何手段收集、编辑、出售或者无偿传播您的个人信息。任何本应用平台用户如从事上述活动，一经发现，本应用有权立即终止与该用户的服务协议。</li>
+</ul>
+
+<h2>4. 信息披露</h2>
+
+<ul>
+    <li>(a) 经您事先同意，向第三方披露；</li>
+    <li>(b) 为提供您所要求的产品和服务，而必须和第三方分享您的个人信息；</li>
+    <li>(c) 根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露；</li>
+    <li>(d) 如您出现违反中国有关法律、法规或者本应用服务协议或相关规则的情况，需要向第三方披露；</li>
+    <li>(e) 如您是适格的知识产权投诉人并已提起投诉，应被投诉人要求，向被投诉人披露，以便双方处理可能的权利纠纷；</li>
+    <li>(f) 在本应用平台上创建的某一交易中，如交易任何一方履行或部分履行了交易义务并提出信息披露请求的，本应用有权决定向该用户提供其交易对方的联络方式等必要信息，以促成交易的完成或纠纷的解决。</li>
+    <li>(g) 其它本应用根据法律、法规或者网站政策认为合适的披露。</li>
+</ul>
+
+<h2>5. 信息存储和交换</h2>
+
+<p>
+    本应用收集的有关您的信息和资料将保存在本应用及（或）其关联公司的服务器上，
+    这些信息和资料可能传送至您所在国家、地区或本应用收集信息和资料所在地的境外并在境外被访问、存储和展示。
+</p>
+
+<h2>6. Cookie的使用</h2>
+
+<ul>
+    <li>(a) 在您未拒绝接受cookies的情况下，本应用会在您的计算机上设定或取用cookies ，以便您能登录或使用依赖于cookies的本应用平台服务或功能。</li>
+    <li>(b) 您有权选择接受或拒绝接受cookies。您可以通过修改浏览器设置的方式拒绝接受cookies。但如果您选择拒绝接受cookies，则您可能无法登录或使用依赖于cookies的本应用网络服务或功能。</li>
+    <li>(c) 通过本应用所设cookies所取得的有关信息，将适用本政策。</li>
+</ul>
+
+<h2>7. 信息安全</h2>
+
+<ul>
+    <li>(a) 本应用帐号均有安全保护功能，请妥善保管您的用户名及密码信息。本应用将通过对用户密码进行加密等安全措施确保您的信息不丢失，不被滥用和变造。尽管有前述安全措施，但同时也请您注意在信息网络上不存在“完善的安全措施”。</li>
+    <li>(b) 在使用本应用网络服务进行网上交易时，您不可避免的要向交易对方或潜在的交易对方披露自己的个人信息，如联络方式或者邮政地址。请您妥善保护自己的个人信息，仅在必要的情形下向他人提供。如您发现自己的个人信息泄密，尤其是本应用用户名及密码发生泄露，请您立即联络本应用客服，以便本应用采取相应措施。</li>
+</ul>
+
+<h2>8. 本隐私政策的更改</h2>
+
+<ul>
+    <li>(a) 如果决定更改隐私政策，我们会在本政策中、本公司网站中以及我们认为适当的位置发布这些更改，以便您了解我们如何收集、使用您的个人信息，哪些人可以访问这些信息，以及在什么情况下我们会透露这些信息。</li>
+    <li>(b) 本公司保留随时修改本政策的权利，因此请经常查看。如对本政策作出重大更改，本公司会通过网站通知的形式告知。</li>
+</ul>
+<h2>补充说明：设备权限与个人信息的合规使用</h2>
+
+<p>
+    为保障应用的正常运行、安全稳定以及功能完整性，本应用可能会在您使用特定功能时，
+    根据实际业务需要，在取得您的明示同意后，申请并使用相关系统权限，
+    并仅在实现对应功能或服务目的的必要范围内收集和使用个人信息。
+</p>
+
+<p>
+    本应用不会在未取得您同意的情况下，主动或后台收集任何与当前功能无关的个人信息，
+    亦不会在功能未触发或未使用的情况下提前申请相关权限。
+</p>
+
+<h3>一、设备信息与网络信息的使用说明</h3>
+
+<p>
+    在您使用本应用过程中，为保障账号安全、设备安全、反作弊、防欺诈及系统稳定运行，
+    我们可能会在您同意隐私政策并使用相关功能时，依法合规地收集部分设备信息和网络信息，
+    包括但不限于设备标识符、网络连接信息及系统配置信息。
+</p>
+
+<p>
+    上述信息的使用目的仅限于：
+</p>
+
+<ul>
+    <li>识别设备的安全状态，防止恶意注册、异常登录及作弊行为</li>
+    <li>保障账号及交易安全，进行必要的风险控制与安全校验</li>
+    <li>进行应用版本更新、故障排查及系统性能优化</li>
+</ul>
+
+<p>
+    我们不会将上述信息用于用户画像、个性化推荐或任何与安全风控无关的用途，
+    亦不会将该等信息用于广告投放。
+</p>
+
+<h3>二、关于 WLAN、MAC 地址及软件列表信息的说明</h3>
+
+<p>
+    在特定安全场景下（如账号异常检测、设备风险识别、反作弊校验等），
+    本应用可能会在获得您授权后，依法合规地获取以下信息：
+</p>
+
+<ul>
+    <li>网络连接状态及 WLAN 信息</li>
+    <li>设备相关标识信息（如 MAC 地址的脱敏或加密形式）</li>
+    <li>应用运行环境及必要的软件配置信息</li>
+</ul>
+
+<p>
+    上述信息仅用于判断当前设备或网络环境的安全性，
+    用于防范恶意行为、保障服务稳定运行，
+    不会用于识别您的真实身份，也不会进行不必要的存储或长期留存。
+</p>
+
+<h3>三、关于存储权限的使用说明</h3>
+
+<p>
+    本应用不会在用户未主动触发相关功能的情况下，
+    提前或强制申请存储权限。
+</p>
+
+<p>
+    仅在以下场景中，在取得您明确授权后，才会使用存储权限：
+</p>
+
+<ul>
+    <li>下载或缓存您主动请求的内容</li>
+    <li>保存您明确操作生成的文件或数据</li>
+    <li>保障应用必要的数据读取与写入功能正常运行</li>
+</ul>
+
+<p>
+    存储权限仅用于实现对应功能，不会用于访问、修改或上传与功能无关的文件内容。
+</p>
+
+<h3>四、权限管理与撤回授权</h3>
+
+<p>
+    您可以随时通过设备系统设置管理或撤回已授予本应用的相关权限。
+    如您拒绝或撤回授权，可能会导致部分功能无法正常使用，
+    但不会影响您使用本应用的其他基础功能。
+</p>
+
+<p>
+    本应用不会因您拒绝非必要权限授权，而降低核心功能服务质量或强制要求您同意。
+</p>
+
+<h2>9. 第三方SDK情况说明</h2>
+
+<p>
+    为了确保您可以在不同设备类型上使用我们的软件以及其接入的第三方服务，
+    在向您提供服务过程中，基于实现在用户身份认证、手机设备安全、接收信息、登录第三方服务、
+    通过第三方服务分享信息以及信息及交易安全的需要，软件接入了第三方SDK，
+    其中部分第三方SDK可能会调用或获取您的相关信息。
+    我们将这些第三方SDK的名称、使用目的、官网链接以及可能调用的权限分列明如下。
+</p>
+
+<h3>(1) LeanCloud</h3>
+
+<p>使用目的：数据存储服务</p>
+<p>官网链接：https://console.leancloud.cn/apps</p>
+<p>隐私政策链接：https://www.leancloud.cn/terms/</p>
+
+<p>可能调用的权限：</p>
+<ul>
+    <li>查看WLAN连接</li>
+    <li>读取外置存储卡</li>
+    <li>读取手机状态和身份</li>
+    <li>写入外部存储卡</li>
+    <li>检索正在运行的应用</li>
+</ul>
+
+<p>
+    收集个人信息类型：唯一设备识别码（IMEI/Mac/android ID/IDFA/OPENUDID/GUID、SIM 卡 IMSI 信息）、
+    无线网SSID名称、WIFI路由器MAC地址、设备品牌型号、软件系统版本信息、运营商信息、设备时区、
+    修改/删除SD卡中的内容（WRITE_EXTERNAL_STORAGE、READ_EXTERNAL_STORAGE）、
+    声明软件包可见性（QUERY_ALL_PACKAGES）
+</p>
+
+<p>公司名称：海口南霄网络科技有限公司</p>
+<p>注册地址：海南省海口市美兰区海南省海口市美兰区白龙街道滨江花园1栋326房</p>
+<p>常用办公地址：海南省海口市美兰区海南省海口市美兰区白龙街道滨江花园1栋326房</p>
+<p>信息保护负责人联系方式：ad9954942@163.com</p>
+<p>技术联系方式：ad9954942@163.com</p>
+
+</body>
+</html>
